added images of forms

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
          <img src="img/central_image.png" alt="tire">
        </section>
      </header>
-     <div class="menu">
+      <div class="menu">
       <nav>
         <ul>
           <li><a href="#"> о компани</a></li>
@@ -49,6 +49,11 @@
         <span class="goods">товаров:<span class="number">0</span></span>
         <span>на сумму:<span class="number2">0,00 грн.</span></span>
       </div>
+    </div>
+    <div class="forms">
+          <img class="img1" src="img/form1.png">
+          <img class="img2" src="img/form2.png">
+          <img class="img3" src="img/form3.png">
     </div>
     <div class="content">
       <aside>
