deleted one section replaced article to div and fixed list problem

--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
            <a href="#"><img src="img/letter.png" alt="letter_icon"></a>
          </section>
        </section>
-       <section class="img">
-         <img src="img/central_image.png" alt="tire">
-       </section>
+         <img class="img" src="img/central_image.png" alt="tire">
      </header>
       <div class="menu">
+
       <nav>
         <ul>
           <li><a href="#"> о компани</a></li>
@@ -49,13 +48,17 @@
         <span class="goods">товаров:<span class="number">0</span></span>
         <span>на сумму:<span class="number2">0,00 грн.</span></span>
       </div>
-    </div>
+      </div>
+
+
     <div class="forms">
           <img class="img1" src="img/form1.png">
           <img class="img2" src="img/form2.png">
           <img class="img3" src="img/form3.png">
     </div>
     <div class="content">
+
+
       <aside>
         <div class="column_caption">
           <div class="copy_icon">
@@ -205,7 +208,7 @@
 </div>
 <input type="submit" name="choose" value="Выбрать">
 </aside>
-<article class="partners">
+<div class="partners">
   <img src="img/toyotires.png" alt="logo">
   <img src="img/bridgestone.png" alt="logo">  
   <img src="img/3.png" alt="logo">
@@ -214,8 +217,10 @@
   <img src="img/tirefactory.png" alt="logo">
   <img src="img/7.png" alt="logo">
   <img src="img/8.png" alt="logo">
-</article>
 </div>
+
+</div>
+
 <footer>
   <a href="#">О компании</a>
   <div class="line"></div>
