--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
           </span>
           <section class="authorization">
             <img src="img/autorization_man.png" alt="man's shadow">
+            <form action="#" method="post">
             <input type="text" name="login" placeholder="логин">
             <input type="password" name="password" placeholder="пароль">
+            </form>
             <a href="#" class="entrance" target="_blank"><span class="with_border">вход</span></a>
             <a href="#" class="entrance" target="_blank"><span>регистрация</span></a>
             <a href="#" class="forget_password" target="_blank">забыли пароль?</a>
@@ -33,7 +35,6 @@
          <img class="img" src="img/central_image.png" alt="tire">
      </header>
       <div class="menu">
-
       <nav>
         <ul>
           <li><a href="#"> о компани</a></li>
@@ -49,16 +50,12 @@
         <span>на сумму:<span class="number2">0,00 грн.</span></span>
       </div>
       </div>
-
-
     <div class="forms">
           <img class="img1" src="img/form1.png">
           <img class="img2" src="img/form2.png">
           <img class="img3" src="img/form3.png">
     </div>
     <div class="content">
-
-
       <aside>
         <div class="column_caption">
           <div class="copy_icon">
@@ -191,9 +188,11 @@
     <span>шины</span>
   </div>
   <div class="brands_choice">
-   <input type="checkbox" id="tires_brand1"><label for="tires_brand1">Бренд 1</label></br>
-   <input type="checkbox" id="tires_brand2"><label for="tires_brand2">Бренд 1</label></br>
-   <input type="checkbox" id="tires_brand3"><label for="tires_brand3">Бренд 1</label></br>
+ <form action="#" method="post">
+    <label for="tires_brand1">Бренд 1<input type="checkbox" id="tires_brand1"></label>
+   <label for="tires_brand2">Бренд 1<input type="checkbox" id="tires_brand2"></label>
+   <label for="tires_brand3">Бренд 1<input type="checkbox" id="tires_brand3"></label>
+   </form>
  </div>
  <div class="wheels tires_right">
   <div class="wheels_icon">
@@ -202,9 +201,11 @@
   <span>диски</span>
 </div>
 <div class="wheels_choice">
- <input type="checkbox" id="wheels_brand1"><label for="wheels_brand1">Бренд 1</label></br>
- <input type="checkbox" id="wheels_brand2"><label for="wheels_brand2">Бренд 1</label></br>
- <input type="checkbox" id="wheels_brand3"><label for="wheels_brand3">Бренд 1</label></br>
+<form action="#" method="post">
+ <label for="wheels_brand1">Бренд 1<input type="checkbox" id="wheels_brand1"></label>
+ <label for="wheels_brand2">Бренд 1<input type="checkbox" id="wheels_brand2"></label>
+ <label for="wheels_brand3">Бренд 1<input type="checkbox" id="wheels_brand3"></label>
+ </form>
 </div>
 <input type="submit" name="choose" value="Выбрать">
 </aside>
@@ -218,9 +219,7 @@
   <img src="img/7.png" alt="logo">
   <img src="img/8.png" alt="logo">
 </div>
-
 </div>
-
 <footer>
   <a href="#">О компании</a>
   <div class="line"></div>
@@ -229,7 +228,7 @@
   <a href="#">Статьи</a>
   <div class="line"></div>
   <a href="#">Контакты</a>
-  <p>Создание сайта &copy Global vision</p>
+  <p>Создание сайта &copy; Global vision</p>
 </footer>
 </div>
 </body>
