vnesla zminy v praviy kolontsi

--- a/index.html
+++ b/index.html
@@ -187,13 +187,16 @@
     </div>
     <span>шины</span>
   </div>
-  <div class="brands_choice">
- <form action="#" method="post">
-    <label for="tires_brand1">Бренд 1<input type="checkbox" id="tires_brand1"></label>
-   <label for="tires_brand2">Бренд 1<input type="checkbox" id="tires_brand2"></label>
-   <label for="tires_brand3">Бренд 1<input type="checkbox" id="tires_brand3"></label>
-   </form>
- </div>
+ <form class="right" action="#" method="post">
+
+
+<div class="brands_choice"> 
+<label class="wheels_brand"><input type="checkbox" id="tires_brand1">Бренд 1</label>
+<label class="wheels_brand"><input type="checkbox" id="tires_brand2">Бренд 1</label>
+<label class="wheels_brand"><input type="checkbox" id="tires_brand3">Бренд 1</label>
+</div>
+
+
  <div class="wheels tires_right">
   <div class="wheels_icon">
     <img src="img/bus.png">
@@ -201,13 +204,13 @@
   <span>диски</span>
 </div>
 <div class="wheels_choice">
-<form action="#" method="post">
- <label for="wheels_brand1">Бренд 1<input type="checkbox" id="wheels_brand1"></label>
- <label for="wheels_brand2">Бренд 1<input type="checkbox" id="wheels_brand2"></label>
- <label for="wheels_brand3">Бренд 1<input type="checkbox" id="wheels_brand3"></label>
+ <label class="tires_brand"><input type="checkbox" id="wheels_brand1">Бренд 1</label>
+ <label class="tires_brand"><input type="checkbox" id="wheels_brand2">Бренд 1</label>
+ <label class="tires_brand"><input type="checkbox" id="wheels_brand3">Бренд 1</label>
+ <input type="submit" name="choose" value="Выбрать">
+
  </form>
 </div>
-<input type="submit" name="choose" value="Выбрать">
 </aside>
 <div class="partners">
   <img src="img/toyotires.png" alt="logo">
