--- a/index.html
+++ b/index.html
@@ -6,233 +6,228 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="wrapper">
-    <header>
-      <section class="header_up">
-        <div class="phone_icon">
-          <img src="img/phone.png" alt="phone">
-        </div>
-        <span class="phone_number">
-          (044) 123-45-67</span>
-          <span class="phone_number_2">(044) 567-89-10
-          </span>
-          <section class="authorization">
-            <img src="img/autorization_man.png" alt="man's shadow">
-            <form action="#" method="post">
-            <input type="text" name="login" placeholder="логин">
-            <input type="password" name="password" placeholder="пароль">
-            </form>
-            <a href="#" class="entrance" target="_blank"><span class="with_border">вход</span></a>
-            <a href="#" class="entrance" target="_blank"><span>регистрация</span></a>
-            <a href="#" class="forget_password" target="_blank">забыли пароль?</a>
-          </section>
-          <section class="site_navigation">
-           <a href="#"><img src="img/home.png" alt="home_icon"></a>
-           <a href="#"><img src="img/site_map.png" alt="map_icon"></a>
-           <a href="#"><img src="img/letter.png" alt="letter_icon"></a>
-         </section>
-       </section>
-         <img class="img" src="img/central_image.png" alt="tire">
-     </header>
-      <div class="menu">
-      <nav>
-        <ul>
-          <li><a href="#"> о компани</a></li>
-          <li><a href="#">оплата</a></li>
-          <li><a href="#">доставка</a></li>
-          <li><a href="#">статьи</a></li>
-          <li><a href="#">контакты</a></li>
-        </ul>
-      </nav>
-      <div class="counter">
-        <img src="img/busket.png">
-        <span class="goods">товаров:<span class="number">0</span></span>
-        <span>на сумму:<span class="number2">0,00 грн.</span></span>
-      </div>
-      </div>
-    <div class="forms">
-          <img class="img1" src="img/form1.png">
-          <img class="img2" src="img/form2.png">
-          <img class="img3" src="img/form3.png">
-    </div>
-    <div class="content">
-      <aside>
-        <div class="column_caption">
-          <div class="copy_icon">
-            <img src="img/copy.png" alt="copy_icon">
-          </div>
-          <span>каталог продукции:</span>
-        </div>
-        <div class="tires">
-          <div class="tire_icon">
-            <img src="img/bus.png">
-          </div>
-          <span>шины</span>
-        </div>
-        <ul class="tires_list">
-         <li><a href="#">Наименование 1</a></li>
-         <li><a href="#">Наименование 2</a></li>
-         <li><a href="#">Наименование 3</a></li>
-         <li style="margin-bottom: 0px"><a href="#">Наименование 4</a></li>
-       </ul>
-       <div class="wheels">
-        <div class="wheels_icon">
-          <img src="img/bus.png">
-        </div>
-        <span>диски</span>
-      </div>
-      <ul class="wheels_list">
-       <li><a href="#">Наименование 1</a></li>
-       <li><a href="#">Наименование 2</a></li>
-       <li><a href="#">Наименование 3</a></li>
-       <li style="margin-bottom: 0px"><a href="#">Наименование 4</a></li>
-     </ul>
-     <div class="bolts">
-      <div class="bolts_icon">
-        <img src="img/bus.png">
-      </div>
-      <span>болты</span>
-    </div>
-    <ul class="bolts_list">
-     <li><a href="#">Наименование 1</a></li>
-     <li><a href="#">Наименование 2</a></li>
-     <li><a href="#">Наименование 3</a></li>
-     <li><a href="#">Наименование 4</a></li>
-   </ul>
- </aside>
- <main>
-   <div class="image">
-    <p class="image_text_up">Goodyear</p>
-    <p class="image_text_down">Ultra Grip Extreme</p>
-    <figure>
-      <img src="img/shyny1.png" alt="tire">
-      <figcaption>90.00 грн.</figcaption>
-    </figure>
-  </div>
-  <div class="image">
-    <p class="image_text_up">Nokian</p>
-    <p class="image_text_down">Hakkapeliitta R</p>
-    <figure>
-      <img src="img/shyny2.png" alt="tire">
-      <figcaption>115.00 грн.</figcaption>
-    </figure>
-  </div>
-  <div class="image">
-    <p class="image_text_up">Hankook</p>
-    <p class="image_text_down">K 708 155/65 R14 </p>
-    <figure>
-      <img src="img/shyny3.png" alt="tire">
-      <figcaption>393.00 грн.</figcaption>
-    </figure>
-  </div>
-  <div class="image">
-    <p class="image_text_up">Goodyear</p>
-    <p class="image_text_down">Ultra Grip Extreme</p>
-    <figure>
-      <img src="img/shyny1.png" alt="tire">
-      <figcaption>90.00 грн.</figcaption>
-    </figure>
-  </div>
-  <div class="image">
-    <p class="image_text_up">Nokian</p>
-    <p class="image_text_down">Hakkapeliitta R</p>
-    <figure>
-      <img src="img/shyny2.png" alt="tire">
-      <figcaption>115.00 грн.</figcaption>
-    </figure>
-  </div>
-  <div class="image">
-    <p class="image_text_up">Hankook</p>
-    <p class="image_text_down">K 708 155/65 R14 </p>
-    <figure>
-      <img src="img/shyny3.png" alt="tire">
-      <figcaption>393.00 грн.</figcaption>
-    </figure>
-  </div>
-  <div class="image">
-    <p class="image_text_up">Goodyear</p>
-    <p class="image_text_down">Ultra Grip Extreme</p>
-    <figure>
-      <img src="img/shyny1.png" alt="tire">
-      <figcaption>90.00 грн.</figcaption>
-    </figure>
-  </div>
-  <div class="image">
-    <p class="image_text_up">Nokian</p>
-    <p class="image_text_down">Hakkapeliitta R</p>
-    <figure>
-      <img src="img/shyny2.png" alt="tire">
-      <figcaption>115.00 грн.</figcaption>
-    </figure>
-  </div>
-  <div class="image">
-    <p class="image_text_up">Hankook</p>
-    <p class="image_text_down">K 708 155/65 R14 </p>
-    <figure>
-      <img src="img/shyny3.png" alt="tire">
-      <figcaption>393.00 грн.</figcaption>
-    </figure>
-  </div>
-</main>
-<aside>
-  <div class="column_caption column_caption_right">
-    <div class="copy_icon">
-      <img src="img/copy.png" alt="copy_icon">
-    </div>
-    <span class="brands">бренды:</span>
-  </div>
-  <div class="tires tires_right">
-    <div class="tire_icon">
-      <img src="img/bus.png">
-    </div>
-    <span>шины</span>
-  </div>
- <form class="right" action="#" method="post">
-
-
-<div class="brands_choice"> 
-<label class="wheels_brand"><input type="checkbox" id="tires_brand1">Бренд 1</label>
-<label class="wheels_brand"><input type="checkbox" id="tires_brand2">Бренд 1</label>
-<label class="wheels_brand"><input type="checkbox" id="tires_brand3">Бренд 1</label>
-</div>
-
-
- <div class="wheels tires_right">
-  <div class="wheels_icon">
-    <img src="img/bus.png">
-  </div>
-  <span>диски</span>
-</div>
-<div class="wheels_choice">
- <label class="tires_brand"><input type="checkbox" id="wheels_brand1">Бренд 1</label>
- <label class="tires_brand"><input type="checkbox" id="wheels_brand2">Бренд 1</label>
- <label class="tires_brand"><input type="checkbox" id="wheels_brand3">Бренд 1</label>
- <input type="submit" name="choose" value="Выбрать">
-
- </form>
-</div>
-</aside>
-<div class="partners">
-  <img src="img/toyotires.png" alt="logo">
-  <img src="img/bridgestone.png" alt="logo">  
-  <img src="img/3.png" alt="logo">
-  <img src="img/4.png" alt="logo">
-  <img src="img/avon.png" alt="logo">
-  <img src="img/tirefactory.png" alt="logo">
-  <img src="img/7.png" alt="logo">
-  <img src="img/8.png" alt="logo">
-</div>
-</div>
-<footer>
-  <a href="#">О компании</a>
-  <div class="line"></div>
-  <a href="#">Доставка</a>
-  <div class="line"></div>
-  <a href="#">Статьи</a>
-  <div class="line"></div>
-  <a href="#">Контакты</a>
-  <p>Создание сайта &copy; Global vision</p>
-</footer>
-</div>
-</body>
-</html>
+	<div class="wrapper">
+		<header>
+			<section class="header_up">
+				<div class="phone_icon">
+					<img src="img/phone.png" alt="phone">
+				</div>
+				<span class="phone_number">
+					(044) 123-45-67</span>
+					<span class="phone_number_2">(044) 567-89-10
+					</span>
+					<section class="authorization">
+						<img src="img/autorization_man.png" alt="man's shadow">
+						<form action="#" method="post">
+							<input type="text" name="login" placeholder="логин">
+							<input type="password" name="password" placeholder="пароль">
+						</form>
+						<a href="#" class="entrance" target="_blank"><span class="with_border">вход</span></a>
+						<a href="#" class="entrance" target="_blank"><span>регистрация</span></a>
+						<a href="#" class="forget_password" target="_blank">забыли пароль?</a>
+					</section>
+					<section class="site_navigation">
+						<a href="#"><img src="img/home.png" alt="home_icon"></a>
+						<a href="#"><img src="img/site_map.png" alt="map_icon"></a>
+						<a href="#"><img src="img/letter.png" alt="letter_icon"></a>
+					</section>
+				</section>
+				<img class="img" src="img/central_image.png" alt="tire">
+			</header>
+			<div class="menu">
+				<nav>
+					<ul>
+						<li><a href="#"> о компани</a></li>
+						<li><a href="#">оплата</a></li>
+						<li><a href="#">доставка</a></li>
+						<li><a href="#">статьи</a></li>
+						<li><a href="#">контакты</a></li>
+					</ul>
+				</nav>
+				<div class="counter">
+					<img src="img/busket.png">
+					<span class="goods">товаров:<span class="number">0</span></span>
+					<span>на сумму:<span class="number2">0,00 грн.</span></span>
+				</div>
+			</div>
+			<div class="forms">
+				<img class="img1" src="img/form1.png">
+				<img class="img2" src="img/form2.png">
+				<img class="img3" src="img/form3.png">
+			</div>
+			<div class="content">
+				<aside>
+					<div class="column_caption">
+						<div class="copy_icon">
+							<img src="img/copy.png" alt="copy_icon">
+						</div>
+						<span>каталог продукции:</span>
+					</div>
+					<div class="tires">
+						<div class="tire_icon">
+							<img src="img/bus.png">
+						</div>
+						<span>шины</span>
+					</div>
+					<ul class="tires_list">
+						<li><a href="#">Наименование 1</a></li>
+						<li><a href="#">Наименование 2</a></li>
+						<li><a href="#">Наименование 3</a></li>
+						<li style="margin-bottom: 0px"><a href="#">Наименование 4</a></li>
+					</ul>
+					<div class="wheels">
+						<div class="wheels_icon">
+							<img src="img/bus.png">
+						</div>
+						<span>диски</span>
+					</div>
+					<ul class="wheels_list">
+						<li><a href="#">Наименование 1</a></li>
+						<li><a href="#">Наименование 2</a></li>
+						<li><a href="#">Наименование 3</a></li>
+						<li style="margin-bottom: 0px"><a href="#">Наименование 4</a></li>
+					</ul>
+					<div class="bolts">
+						<div class="bolts_icon">
+							<img src="img/bus.png">
+						</div>
+						<span>болты</span>
+					</div>
+					<ul class="bolts_list">
+						<li><a href="#">Наименование 1</a></li>
+						<li><a href="#">Наименование 2</a></li>
+						<li><a href="#">Наименование 3</a></li>
+						<li><a href="#">Наименование 4</a></li>
+					</ul>
+				</aside>
+				<main>
+					<div class="image">
+						<p class="image_text_up">Goodyear</p>
+						<p class="image_text_down">Ultra Grip Extreme</p>
+						<figure>
+							<img src="img/shyny1.png" alt="tire">
+							<figcaption>90.00 грн.</figcaption>
+						</figure>
+					</div>
+					<div class="image">
+						<p class="image_text_up">Nokian</p>
+						<p class="image_text_down">Hakkapeliitta R</p>
+						<figure>
+							<img src="img/shyny2.png" alt="tire">
+							<figcaption>115.00 грн.</figcaption>
+						</figure>
+					</div>
+					<div class="image">
+						<p class="image_text_up">Hankook</p>
+						<p class="image_text_down">K 708 155/65 R14 </p>
+						<figure>
+							<img src="img/shyny3.png" alt="tire">
+							<figcaption>393.00 грн.</figcaption>
+						</figure>
+					</div>
+					<div class="image">
+						<p class="image_text_up">Goodyear</p>
+						<p class="image_text_down">Ultra Grip Extreme</p>
+						<figure>
+							<img src="img/shyny1.png" alt="tire">
+							<figcaption>90.00 грн.</figcaption>
+						</figure>
+					</div>
+					<div class="image">
+						<p class="image_text_up">Nokian</p>
+						<p class="image_text_down">Hakkapeliitta R</p>
+						<figure>
+							<img src="img/shyny2.png" alt="tire">
+							<figcaption>115.00 грн.</figcaption>
+						</figure>
+					</div>
+					<div class="image">
+						<p class="image_text_up">Hankook</p>
+						<p class="image_text_down">K 708 155/65 R14 </p>
+						<figure>
+							<img src="img/shyny3.png" alt="tire">
+							<figcaption>393.00 грн.</figcaption>
+						</figure>
+					</div>
+					<div class="image">
+						<p class="image_text_up">Goodyear</p>
+						<p class="image_text_down">Ultra Grip Extreme</p>
+						<figure>
+							<img src="img/shyny1.png" alt="tire">
+							<figcaption>90.00 грн.</figcaption>
+						</figure>
+					</div>
+					<div class="image">
+						<p class="image_text_up">Nokian</p>
+						<p class="image_text_down">Hakkapeliitta R</p>
+						<figure>
+							<img src="img/shyny2.png" alt="tire">
+							<figcaption>115.00 грн.</figcaption>
+						</figure>
+					</div>
+					<div class="image">
+						<p class="image_text_up">Hankook</p>
+						<p class="image_text_down">K 708 155/65 R14 </p>
+						<figure>
+							<img src="img/shyny3.png" alt="tire">
+							<figcaption>393.00 грн.</figcaption>
+						</figure>
+					</div>
+				</main>
+				<aside>
+					<div class="column_caption column_caption_right">
+						<div class="copy_icon">
+							<img src="img/copy.png" alt="copy_icon">
+						</div>
+						<span class="brands">бренды:</span>
+					</div>
+					<div class="tires tires_right">
+						<div class="tire_icon">
+							<img src="img/bus.png">
+						</div>
+						<span>шины</span>
+					</div>
+					<form class="right" action="#" method="post">
+						<div class="brands_choice"> 
+							<label class="wheels_brand"><input type="checkbox" id="tires_brand1"><span class="text_input1">Бренд 1</span></label>
+							<label class="wheels_brand"><input type="checkbox" id="tires_brand2"><span class="text_input2">Бренд 1</span></label>
+							<label class="wheels_brand"><input type="checkbox" id="tires_brand3"><span class="text_input3">Бренд 1</span></label>
+						</div>
+						<div class="wheels tires_right">
+							<div class="wheels_icon">
+								<img src="img/bus.png">
+							</div>
+							<span>диски</span>
+						</div>
+						<div class="wheels_choice">
+							<label class="tires_brand"><input type="checkbox" id="wheels_brand1"><span class="text_input4">Бренд 1</span></label>
+							<label class="tires_brand"><input type="checkbox" id="wheels_brand2"><span class="text_input5">Бренд 1</span></label>
+							<label class="tires_brand"><input type="checkbox" id="wheels_brand3"><span class="text_input6">Бренд 1</span></label>
+							<input type="submit" name="choose" value="Выбрать">
+						</div>
+					</form>
+				</aside>
+				<div class="partners">
+					<img src="img/toyotires.png" alt="logo">
+					<img src="img/bridgestone.png" alt="logo">  
+					<img src="img/3.png" alt="logo">
+					<img src="img/4.png" alt="logo">
+					<img src="img/avon.png" alt="logo">
+					<img src="img/tirefactory.png" alt="logo">
+					<img src="img/7.png" alt="logo">
+					<img src="img/8.png" alt="logo">
+				</div>
+			</div>
+			<footer>
+				<a href="#">О компании</a>
+				<div class="line"></div>
+				<a href="#">Доставка</a>
+				<div class="line"></div>
+				<a href="#">Статьи</a>
+				<div class="line"></div>
+				<a href="#">Контакты</a>
+				<p>Создание сайта &copy; Global vision</p>
+			</footer>
+		</div>
+	</body>
+	</html>
